<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    
    <string name="bill_text_view">Bill</string>
    <string name="bill_edit_text">0.0</string>
    
    <string name="tip_text_view">Tip</string>
    <string name="tip_edit_text">.15</string>
    
    <string name="final_bill_text_view">Final Bill</string>
    <string name="final_bill_edit_text">0.0</string>
    
    <!-- END OF FIRST PART -->
    
    <string name="change_tip_text_view">Change Tip</string>
    
    <string name="intro_textView">Introduction</string>
    <string name="friendly_check">Friendly</string>
    <string name="specials_check">Specials</string>
    <string name="opinion_check">Opinion</string>
    
    <string name="availability_textView">Availability</string>
    <string name="bad_radio">Bad</string>
    <string name="ok_radio">OK</string>
    <string name="good_radio">Good</string>
    
    
    <string-array name="problem_solving">
        <item>Problem Solving</item>
        <item>Bad</item>
        <item>OK</item>
        <item>Good</item>
    </string-array>
    
    
    <string name="time_for_service">Time waiting for service</string>
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="reset_button">Reset</string>
    
    

</resources>